<resources>
    <string name="app_name">Polisiku</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cari">Cari</string>
    <string name="laporan">Laporan</string>
    <string name="polisi">Polisi</string>
    <string name="more">More</string>
    <string name="suka">30\nSuka</string>
    <string name="komentar">10\nKomentar</string>
    <string name="pengirimlap">Pengirim Laporan : </string>
    <string name="sim">SIM</string>
    <string name="skck">SKCK</string>
    <string name="izinkeramaian">Izin Keramaian</string>
    <string name="pengamanan">PENGAMANAN/PENGAWALAN</string>
    <string name="samsat">SAMSAT</string>
    <string name="ugd">UGD</string>
    <string name="pemadam">PEMADAM KEBAKARAN</string>
    <string name="spbu">SPBU</string>
    <string name="panicbutton">PANIC BUTTON</string>
    <string name="chatt">Chatt</string>
    <string name="discusion">Discussion</string>
    <string name="infohumas">Info Humas</string>
    <string name="polisihalo">Polisi Halo</string>
    <string name="simonline">SIM Online</string>
    <string name="skckonline">SKCK Online</string>
    <string name="samsatonline">Samsat Online</string>
    <string name="information">Information</string>
    <string name="setting">Settings</string>
    <string name="profile">Profile</string>
    <string name="keluar">Keluar</string>
    <string name="fb">Facebook</string>
    <string name="twitt">Twitter</string>
    <string name="wa">WhatsApp</string>
    <string name="line">Line</string>
    <string name="jam">10:00 12/02/2018</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="mbakyayuk">Kamu pasti sudah sering mendengar nama UGM, kan? Kampus kondang yang berada di wilayah Yogyakarta ini memang gudangnya orang cerdas.</string>
</resources>
