<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_cari"
        android:icon="@drawable/ic_search"
        android:title="@string/cari" />

    <item
        android:id="@+id/navigation_laporan"
        android:icon="@drawable/ic_report"
        android:title="@string/laporan" />

    <item
        android:id="@+id/navigation_polisi"
        android:icon="@drawable/ic_police"
        android:title="@string/polisi" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_more"
        android:title="@string/more" />

</menu>