<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_white"
            android:src="@drawable/gambar_olahraga"
           />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/txLokasi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:drawableLeft="@drawable/ic_location"
                android:text="Polsek Lembang Jl. Raya Lembang Bandung"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tx_small" />

            <ImageButton
                android:id="@+id/btSuka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_like" />

            <TextView
                android:id="@+id/txSuka"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/suka"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tx_xsmall" />


            <ImageButton
                android:id="@+id/btKomentar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_comment" />

            <TextView
                android:id="@+id/txKomentar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/komentar"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tx_xsmall" />

        </LinearLayout>

        <TextView
            android:id="@+id/txNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="Fauzan Cahyani"
            android:textSize="@dimen/tx_small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/lorem" />

    </LinearLayout>
</android.support.v7.widget.CardView>

